--- a/.github/workflows/sdcc_build.yml
+++ b/.github/workflows/sdcc_build.yml
@@ -40,6 +40,23 @@ jobs:
           unzip sdcc.zip          
           # tar xvf sdcc.tar          
 
+      - name: Install boost
+        # if: (matrix.name == 'Linux-x64')
+        uses: MarkusJx/install-boost@v2.0.0
+        id: install-boost
+        with:
+          # REQUIRED: Specify the required boost version
+          # A list of supported versions can be found here: 
+          # https://github.com/actions/boost-versions/blob/main/versions-manifest.json
+          boost_version: 1.73.0
+          # OPTIONAL: Specify a platform version
+          platform_version: 18.04
+          # OPTIONAL: Specify a custom install location
+          # boost_install_dir: /home/runner/some_directory
+
+          # NOTE: If a boost version matching all requirements cannot be found,
+          # this build step will fail
+
       # ==== Build SDCC ====
       - name: Build SDCC
         if: (matrix.name == 'Linux-x64') || (matrix.name == 'MacOS-x64')
