build: sdcc: package: fix conditional name typo

--- a/.github/workflows/sdcc_build.yml
+++ b/.github/workflows/sdcc_build.yml
@@ -79,10 +79,10 @@ jobs:
           ls -la
 
       - name: Store build
-        if: (matrix.name == 'Linux-64') || (matrix.name == 'MacOS-64')
+        if: (matrix.name == 'Linux-x64') || (matrix.name == 'MacOS-x64')
         uses: actions/upload-artifact@v3
         with:
           name: ${{ matrix.name }}-build
-          path: gbdk-2020-sdcc/${{ env.BUILD_PACKAGE_FILENAME }}
+          path: ${{ env.BUILD_PACKAGE_FILENAME }}
           if-no-files-found: error # 'warn' or 'ignore' are also available, defaults to `warn`
           # retention-days: 14
