--- a/.github/workflows/sdcc_build.yml
+++ b/.github/workflows/sdcc_build.yml
@@ -17,6 +17,8 @@ jobs:
         include:
           - os: ubuntu-20.04
             name: Linux-x64
+          - os: ubuntu-20.04
+            name: WinCross-On-Linux
 #          - os: macos-11
 #            name: MacOS-x64
     steps:
@@ -24,28 +26,51 @@ jobs:
       # Needs to be in a separate step than build so that setting the environment var takes effect
       #
       - name: Pre-Build Linux/MacOS
-        if: (matrix.name == 'Linux-x64') || (matrix.name == 'MacOS-x64')
+        if: (matrix.name == 'Linux-x64') || (matrix.name == 'MacOS-x64') || (matrix.name == 'WinCross-On-Linux')
         shell: bash
         run: |
-          echo "SDCC_VER=14068" >> $GITHUB_ENV
-          echo "BUILD_PACKAGE_FILENAME=sdcc-14068-${{ matrix.name }}.tar.gz" >> $GITHUB_ENV
+          export SDCC_VERSION=14068
+          echo "SDCCV_VER=$SDCC_VERSION" >> $GITHUB_ENV
+          echo "BUILD_PACKAGE_FILENAME=sdcc-$SDCC_VERSION-${{ matrix.name }}.tar.gz" >> $GITHUB_ENV
 
       # ==== Install Dependencies ====
-      - name: Install Dependencies
+      - name: Install Dependencies Linux
         if: (matrix.name == 'Linux-x64')
         run: |
           # Packages (some may already be present)
           sudo apt-get install flex bison libboost-dev texinfo zlib1g zlib1g-dev
 
+      - name: Install Dependencies WinCross
+        if: (matrix.name == 'WinCross-On-Linux')
+        run: |
+          # Packages (some may already be present)
+          sudo apt-get -y install flex bison libboost-dev texinfo zlib1g zlib1g-dev g++ make mingw-w64 gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64 wine64 subversion
+          sudo ln -s /usr/include/boost/ /usr/x86_64-w64-mingw32/include
+          sudo ln -s /usr/include/boost/ /usr/i686-w64-mingw32/include
+          # Zlib missing for mingw 64 bit (might be an easier way than this)
+          wget https://www.zlib.net/fossils/zlib-1.2.13.tar.gz -O- | tar xfz -
+          cd zlib*
+          make -f Makefile.in clean
+          # zlib 'configure' script had some problem, use win32/Makefile.gcc directly
+          sed -e s/"PREFIX =.*"/"PREFIX = x86_64-w64-mingw32-"/ -i win32/Makefile.gcc # automatic replacement
+          make -f win32/Makefile.gcc
+          sudo BINARY_PATH=/usr/x86_64-w64-mingw32/bin INCLUDE_PATH=/usr/x86_64-w64-mingw32/include LIBRARY_PATH=/usr/x86_64-w64-mingw32/lib make -f win32/Makefile.gcc install
+          # Now add mingw 32 bit version
+          make -f Makefile.in clean
+          sed -e s/"PREFIX =.*"/"PREFIX = i686-w64-mingw32-"/ -i win32/Makefile.gcc # automatic replacement
+          make -f win32/Makefile.gcc
+          sudo BINARY_PATH=/usr/i686-w64-mingw32/bin INCLUDE_PATH=/usr/i686-w64-mingw32/include LIBRARY_PATH=/usr/i686-w64-mingw32/lib make -f win32/Makefile.gcc install
+          cd ..
+
       # ==== Download SDCC sources ====
       - name: Download SDCC Sources
-        if: (matrix.name == 'Linux-x64') || (matrix.name == 'MacOS-x64')
+        if: (matrix.name == 'Linux-x64') || (matrix.name == 'MacOS-x64') || (matrix.name == 'WinCross-On-Linux')
         run: |
           # Checkout SDCC source
           svn checkout -q -r $SDCC_VER svn://svn.code.sf.net/p/sdcc/code/trunk sdcc-${{ env.SDCC_VER }}
 
       # ==== Build SDCC ====
-      - name: Build SDCC
+      - name: Build SDCC Linux / MacOS
         if: (matrix.name == 'Linux-x64') || (matrix.name == 'MacOS-x64')
         shell: bash
         run: |    
@@ -61,15 +86,40 @@ jobs:
           cp -f support/sdbinutils/binutils/sdobjcopy bin
           cp -f support/sdbinutils/binutils/sdnm bin
           cp -f support/cpp/gcc/cc1 bin
-          cp -f support/cpp/gcc/cpp sdcpp
+          cp -f support/cpp/gcc/cpp bin/sdcpp
           strip bin/* || true
           ls -la bin          
           cd ../..
 
+      # ==== Build SDCC ====
+      - name: Build SDCC WinCross
+        if: (matrix.name == 'WinCross-On-Linux')
+        shell: bash
+        run: |    
+          cd sdcc-${{ env.SDCC_VER }}/sdcc
+          # 64 bit build
+          ./configure   --enable-sm83-port --enable-z80-port  --enable-mos6502-port   --disable-mcs51-port   --disable-z180-port   --disable-r2k-port   --disable-r2ka-port   --disable-r3ka-port   --disable-tlcs90-port   --disable-ez80_z80-port   --disable-z80n-port   --disable-ds390-port   --disable-ds400-port   --disable-pic14-port   --disable-pic16-port   --disable-hc08-port   --disable-s08-port   --disable-stm8-port   --disable-pdk13-port   --disable-pdk14-port   --disable-pdk15-port   --disable-ucsim   --disable-doc   --disable-device-lib   --host=x86_64-w64-mingw32
+          make
+          # Is this needed? It might get skipped on some builds
+          # cd support/packihx bin
+          # make
+          # New sdcc build no longer copies some binaries to bin
+          find *
+          ls -la bin
+          cp -f src/sdcc.exe bin
+          cp -f support/sdbinutils/binutils/sdar.exe bin
+          cp -f support/sdbinutils/binutils/sdranlib.exe bin
+          cp -f support/sdbinutils/binutils/sdobjcopy.exe bin
+          cp -f support/sdbinutils/binutils/sdnm.exe bin
+          cp -f support/cpp/gcc/cc1.exe bin
+          cp -f support/cpp/gcc/cpp.exe bin/sdcpp.exe
+          strip bin/* || true
+          ls -la bin          
+          cd ../..
 
       # ==== Packaging ====
       - name: Package build Linux/MacOS
-        if: (matrix.name == 'Linux-x64') || (matrix.name == 'MacOS-x64')
+        if: (matrix.name == 'Linux-x64') || (matrix.name == 'MacOS-x64') || (matrix.name == 'WinCross-On-Linux')
         shell: bash
         run: |
           cd sdcc-${{ env.SDCC_VER }}/sdcc
@@ -79,7 +129,7 @@ jobs:
           ls -la
 
       - name: Store build
-        if: (matrix.name == 'Linux-x64') || (matrix.name == 'MacOS-x64')
+        if: (matrix.name == 'Linux-x64') || (matrix.name == 'MacOS-x64') || (matrix.name == 'WinCross-On-Linux')
         uses: actions/upload-artifact@v3
         with:
           name: ${{ matrix.name }}-build
