--- a/.github/workflows/sdcc_build.yml
+++ b/.github/workflows/sdcc_build.yml
@@ -20,12 +20,12 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: ubuntu-20.04
-            name: Linux-x64
-          - os: ubuntu-20.04
-            name: WinCross-On-Linux
-#          - os: macos-11
-#            name: MacOS-x64
+#          - os: ubuntu-20.04
+#            name: Linux-x64
+#          - os: ubuntu-20.04
+#            name: WinCross-On-Linux
+          - os: macos-11
+            name: MacOS-x64
     steps:
       # ==== Pre-Build: Set environment vars ====
       # Needs to be in a separate step than build so that setting the environment var takes effect
@@ -43,6 +43,12 @@ jobs:
         run: |
           # Packages (some may already be present)
           sudo apt-get install flex bison libboost-dev texinfo zlib1g zlib1g-dev
+
+      - name: Install Dependencies MacOS 64
+        if: (matrix.name == 'MacOS-x64')
+        run: |
+          # Packages (some may already be present)
+          brew install flex bison boost texinfo zlib subversion
 
       - name: Install Dependencies WinCross
         if: (matrix.name == 'WinCross-On-Linux')
@@ -78,6 +84,8 @@ jobs:
         if: (matrix.name == 'Linux-x64') || (matrix.name == 'MacOS-x64')
         shell: bash
         run: |    
+          # Target older macOS version than whatever build OS is for better compatibility (Linux should ignore this)
+          export MACOSX_DEPLOYMENT_TARGET=10.10
           cd sdcc-${{ env.SDCC_VER }}/sdcc
           ./configure  --enable-gbz80-port  --enable-z80-port  --enable-mos6502-port  --enable-mos65c02-port  --disable-mcs51-port  --disable-z180-port  --disable-r2k-port  --disable-r2ka-port  --disable-r3ka-port  --disable-tlcs90-port  --disable-ez80_z80-port  --disable-z80n-port  --disable-ds390-port  --disable-ds400-port  --disable-pic14-port  --disable-pic16-port  --disable-hc08-port  --disable-s08-port  --disable-stm8-port  --disable-pdk13-port  --disable-pdk14-port  --disable-pdk15-port  --disable-ucsim  --disable-doc  --disable-device-lib 
           make
