Build: sdcc: fix up artifact name typo

--- a/.github/workflows/sdcc_build.yml
+++ b/.github/workflows/sdcc_build.yml
@@ -169,7 +169,7 @@ jobs:
         if: (matrix.name == 'Linux-x64') || (matrix.name == 'MacOS-x64') || (matrix.name == 'WinCross-On-Linux')
         uses: actions/upload-artifact@v3
         with:
-          name: sdcc-SDCC_VER=${{ inputs.sdcc_version_num }}-${{ matrix.name }}-build
+          name: sdcc-${{ inputs.sdcc_version_num }}-${{ matrix.name }}-build
           path: ${{ env.BUILD_PACKAGE_FILENAME }}
           if-no-files-found: error # 'warn' or 'ignore' are also available, defaults to `warn`
           # retention-days: 14
