--- a/.github/workflows/sdcc_build.yml
+++ b/.github/workflows/sdcc_build.yml
@@ -26,10 +26,10 @@ jobs:
         include:
           - os: ubuntu-20.04
             name: Linux-x64
-#          - os: ubuntu-20.04
-#            name: WinCross-On-Linux
-#          - os: macos-11
-#            name: MacOS-x64
+          - os: ubuntu-20.04
+            name: WinCross-On-Linux
+          - os: macos-11
+            name: MacOS-x64
     steps:
       # ==== Pre-Build: Set environment vars ====
       # Needs to be in a separate step than build so that setting the environment var takes effect
